--- a/about.html
+++ b/about.html
@@ -8,74 +8,76 @@
     <link rel="stylesheet" href="css/dogservices.css" />
   </head>
   <body>
-    <div class="header">
-      <h1>DogServices R'Us</h1>
-      <p>Providing equal opportunity dog services</p>
-    </div>
+    <div class="page-wrap">
+      <div class="header">
+        <h1>DogServices R'Us</h1>
+        <p>Providing equal opportunity dog services</p>
+      </div>
 
-    <div class="navbar">
-      <a href="index.html">Home</a>
-      <a href="services.html">Services</a>
-      <a href="clients.html">Clients</a>
-      <a href="about.html" class="active">About</a>
-      <a href="contact-us.html" class="right">Contact Us</a>
-    </div>
+      <div class="navbar">
+        <a href="index.html">Home</a>
+        <a href="services.html">Services</a>
+        <a href="clients.html">Clients</a>
+        <a href="about.html" class="active">About</a>
+        <a href="contact-us.html" class="right">Contact Us</a>
+      </div>
 
-    <h2 class="section-header">Our Team</h2>
-    <div class="row">
-      <div class="column">
-        <div class="card">
-          <img src="images/shutterstock_304835720.jpg" alt="Jane" class="about-img" />
-          <div class="container">
-            <h2>Jane Smith</h2>
-            <p class="title">Dog Walker</p>
-            <p>Jane is a great dogsitter. She enjoys the furry friends and has a ton of experience taking care
-              of them. She is sure to take care of your dog with great care.
-            </p>
-            <p>(407) 789-1234</p>
-            <p>
-              <a href="mailto:jane@dogservicesrus.com" class="button">Contact</a>
-            </p>
+      <h2 class="section-header">Our Team</h2>
+      <div class="row">
+        <div class="column">
+          <div class="card">
+            <img src="images/shutterstock_304835720.jpg" alt="Jane" class="about-img" />
+            <div class="container">
+              <h2>Jane Smith</h2>
+              <p class="title">Dog Walker</p>
+              <p>Jane is a great dogsitter. She enjoys the furry friends and has a ton of experience taking care
+                of them. She is sure to take care of your dog with great care.
+              </p>
+              <p>(407) 789-1234</p>
+              <p>
+                <a href="mailto:jane@dogservicesrus.com" class="button">Contact</a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="column">
+          <div class="card">
+            <img src="images/shutterstock_1816394333.jpg" alt="Mike" class="about-img"/>
+            <div class="container">
+              <h2>Mike Ross</h2>
+              <p class="title">Dog Runner</p>
+              <p>Mike is an avid runner. He enjoys taking dogs out for a brisk run and will slow down
+              as required to make sure your dog is doing well and getting the exercise they love.
+              </p>
+              <p>(321) 567-3487</p>
+              <p>
+                <a href="mailto:mike@dogservicesrus.com" class="button">Contact</a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="column">
+          <div class="card">
+            <img src="images/shutterstock_1512341666.jpg" alt="John" class="about-img" />
+            <div class="container">
+              <h2>John Watson</h2>
+              <p class="title">Dog Walker</p>
+              <p>John is from Liverpool, England. He really enjoys the Florida weather and loves to be 
+                outside as much as he can. Enjoying the Florida weather with some faithful companions is all he wished for.</p>
+              <p>(407) 345-5643</p>
+              <p>
+                <a href="mailto:john@dogservicesrus.com" class="button">Contact</a>
+              </p>
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="column">
-        <div class="card">
-          <img src="images/shutterstock_1816394333.jpg" alt="Mike" class="about-img"/>
-          <div class="container">
-            <h2>Mike Ross</h2>
-            <p class="title">Dog Runner</p>
-            <p>Mike is an avid runner. He enjoys taking dogs out for a brisk run and will slow down
-             as required to make sure your dog is doing well and getting the exercise they love.
-            </p>
-            <p>(321) 567-3487</p>
-            <p>
-              <a href="mailto:mike@dogservicesrus.com" class="button">Contact</a>
-            </p>
-          </div>
-        </div>
+      <div class="footer">
+        <h3>2021 DogServices R'Us LLC.</h3>
       </div>
-
-      <div class="column">
-        <div class="card">
-          <img src="images/shutterstock_1512341666.jpg" alt="John" class="about-img" />
-          <div class="container">
-            <h2>John Watson</h2>
-            <p class="title">Dog Walker</p>
-            <p>John is from Liverpool, England. He really enjoys the Florida weather and loves to be 
-              outside as much as he can. Enjoying the Florida weather with some faithful companions is all he wished for.</p>
-            <p>(407) 345-5643</p>
-            <p>
-              <a href="mailto:john@dogservicesrus.com" class="button">Contact</a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="footer">
-      <h3>2021 DogServices R'Us LLC.</h3>
     </div>
   </body>
 </html>
