--- a/clients.html
+++ b/clients.html
@@ -8,24 +8,22 @@
     <link rel="stylesheet" href="css/dogservices.css" />
   </head>
   <body>
-    <!-- MAIN (Center website) -->
-    <div class="header">
-      <h1>DogServices R'Us</h1>
-      <p>Providing equal opportunity dog services</p>
-    </div>
+    <div class="page-wrap">
+      <div class="header">
+        <h1>DogServices R'Us</h1>
+        <p>Providing equal opportunity dog services</p>
+      </div>
 
-    <div class="navbar">
-      <a href="index.html">Home</a>
-      <a href="services.html">Services</a>
-      <a href="clients.html" class="active">Clients</a>
-      <a href="about.html">About</a>
-      <a href="contact-us.html" class="right">Contact Us</a>
-    </div>
+      <div class="navbar">
+        <a href="index.html">Home</a>
+        <a href="services.html">Services</a>
+        <a href="clients.html" class="active">Clients</a>
+        <a href="about.html">About</a>
+        <a href="contact-us.html" class="right">Contact Us</a>
+      </div>
 
-    <h2 class="section-header">Happy Clients</h2>
+      <h2 class="section-header">Happy Clients</h2>
 
-    <div class="main-clients">
-      <!-- Portfolio Gallery Grid -->
       <div class="row">
         <div class="column-clients">
           <div class="content">
@@ -60,7 +58,7 @@
         </div>
         <div class="column-clients">
           <div class="content">
-            <img src="images/mela.jpg" alt="Mela" style="width: 85%;"/>
+            <img src="images/mela.jpg" alt="Mela" class="about-img"/>
             <h3>Mela</h3>
             <p>
               Mela is Kyle's dog. She is the furriest of the friends we've had here yet! She enjoys relaxing but when she was ready to play she was unstoppable.
@@ -68,14 +66,10 @@
             </p>
           </div>
         </div>
-        <!-- END GRID -->
       </div>
-
-      <!-- END MAIN -->
-    </div>
-
-    <div class="footer">
-      <h3>2021 DogServices R'Us LLC.</h3>
+      <div class="footer">
+        <h3>2021 DogServices R'Us LLC.</h3>
+      </div>
     </div>
   </body>
 </html>
