--- a/contact-us.html
+++ b/contact-us.html
@@ -8,39 +8,41 @@
     <link rel="stylesheet" href="css/dogservices.css" />
   </head>
   <body>
-    <div class="header">
-      <h1>DogServices R'Us</h1>
-      <p>Providing equal opportunity dog services</p>
-    </div>
+    <div class="page-wrap">
+      <div class="header">
+        <h1>DogServices R'Us</h1>
+        <p>Providing equal opportunity dog services</p>
+      </div>
 
-    <div class="navbar">
-      <a href="index.html">Home</a>
-      <a href="services.html">Services</a>
-      <a href="clients.html">Clients</a>
-      <a href="about.html">About</a>
-      <a href="contact-us.html" class="right-active">Contact Us</a>
-    </div>
+      <div class="navbar">
+        <a href="index.html">Home</a>
+        <a href="services.html">Services</a>
+        <a href="clients.html">Clients</a>
+        <a href="about.html">About</a>
+        <a href="contact-us.html" class="right-active">Contact Us</a>
+      </div>
 
-    <h2 class="section-header">Contact Information</h2>
-    <div class="row">
-      <div class="column-contact">
-        <div class="card">
-          <img src="images/shutterstock_140745739.jpg" alt="Jane" class="about-img" />
-          <div class="container">
+      <h2 class="section-header">Contact Information</h2>
+      <div class="row">
+        <div class="column-contact">
+          <div class="card">
+            <img src="images/shutterstock_140745739.jpg" alt="Jane" class="about-img" />
+            <div class="container">
 
-            <h3>Corporate Office</h3>
-            <p>8668 Concord Center Dr.<br>Maitland, FL 32751</p>
-            <h3>Direct Contact</h3>
-            <p><span>Phone: (407) 974-7878<br>Toll Free: 1-877-234-7878<br></span>Email: <a href="mailto:info@dogservicesrus.com">info@dogservicesrus.com</a></p>
-            <h3>Departments</h3>
-            <p><a href="mailto:customerservice@dogservicesrus.com">customerservice@dogservicesrus.com</a><br> <a href="mailto:careers@dogservicesrus.com">careers@dogservicesrus.com</a></p></div>
+              <h3>Corporate Office</h3>
+              <p>8668 Concord Center Dr.<br>Maitland, FL 32751</p>
+              <h3>Direct Contact</h3>
+              <p><span>Phone: (407) 974-7878<br>Toll Free: 1-877-234-7878<br></span>Email: <a href="mailto:info@dogservicesrus.com">info@dogservicesrus.com</a></p>
+              <h3>Departments</h3>
+              <p><a href="mailto:customerservice@dogservicesrus.com">customerservice@dogservicesrus.com</a><br> <a href="mailto:careers@dogservicesrus.com">careers@dogservicesrus.com</a></p></div>
 
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="footer">
-      <h3>2021 DogServices R'Us LLC.</h3>
+      <div class="footer">
+        <h3>2021 DogServices R'Us LLC.</h3>
+      </div>
     </div>
   </body>
 </html>
